--- a/src/components/OurIndustries.css
+++ b/src/components/OurIndustries.css
@@ -2,7 +2,8 @@
     background-color: #fff; 
     padding: 70px 20px; 
     text-align: center;
-    height: 50%;
+    height: 80%;
+    margin-bottom: 5%;
 }
   
 .industries-container h2 {
